# dreamBig

./: .env.example  .gitignore  Caddyfile  DEPLOYMENT_PHASE4_FINISHING.md  DEVELOPMENT.md  README.md  ROADMAP.md  docker-compose.yml  prd.txt
workers/: Dockerfile  pyproject.toml
workers/src/: scheduler.py  worker.py
workers/src/llm/: __init__.py  cost.py  embedding_client.py  models.py  poe_client.py  retry.py  vision_client.py
workers/src/llm/prompts/: __init__.py  experiment_plan.py  (+12 more)
workers/src/processors/: alerting.py  asset_analysis.py  classifier.py  daily_digest.py  dedup.py  embedding.py  experiment_advisor.py  feishu_command_worker.py  game_name_translate.py  gameplay_intel.py  genre_aggregation.py  genre_weekly_report.py  hook_extraction.py  project_advice_generator.py  report_generator.py  review_analysis.py  scoring.py  trailer_analysis.py  wechat_intelligence.py
workers/src/scrapers/: __init__.py  ad_intel.py  app_store.py  baidu_baike.py  base.py  crazygames.py  google_play.py  poki.py  social_depth.py  social_media.py  steam.py  taptap.py  wechat_mini.py
workers/src/utils/: browser.py  lang_detect.py  notifications.py  notifications_email.py  notifications_wecom.py  proxy.py  rate_limiter.py
workers/tests/: conftest.py  test_alerting.py  test_baidu_baike.py  test_dedup.py  test_embedding.py  test_genre_aggregation.py  test_review_analysis.py  test_scoring.py  test_wechat_mini.py
workers/tests/fixtures/: baidu_baike_yanglegeyang.html  sjqq_detail_wx.html  sjqq_featured_list.html  sjqq_popular_rank.html  sjqq_tag_puzzle.html  sjqq_tag_rpg.html
(+106 files in other folders)
